--- a/demo10.html
+++ b/demo10.html
@@ -24,11 +24,11 @@
          let b = parseInt(prompt("Enter Second value",0))
          let c = parseInt(prompt("Enter Third value",0))
          if(a>b && a>c)
-         document.writeln(a+" is Big</h3>")
+         document.writeln(a+" is Big")
          else if(b>c)
-         document.writeln(b+" is Big</h3>")
+         document.writeln(b+" is Big")
          else
-         document.writeln(c+" is Big</h3>")
+         document.writeln(c+" is Big")
         </pre>
     </body>
 </html>
