--- a/demo4.html
+++ b/demo4.html
@@ -7,14 +7,14 @@
     <body>
         <pre>
             var person = {"id":101,"name":"klu","age":40.5}
-            document.writeln(typeof(person)+"</br>")
-            document.write(person.id+"</br>")
-            document.write(person.name+"</br>")
-            document.write(person.age+"</br>")
+            document.writeln(typeof(person)+"break statement")
+            document.write(person.id+"break statement")
+            document.write(person.name+"break statement")
+            document.write(person.age+"break statement")
             person.name="klef"
             person.age=45.6
-            document.write(person.name+"</br>")
-            document.write(person.age+"</br>")
+            document.write(person.name+"break statement")
+            document.write(person.age+"break statement")
         </pre>
     </body>
 </html>
