--- a/demo11.html
+++ b/demo11.html
@@ -20,7 +20,7 @@
         <pre>
          // for loop
          document.writeln("Displaying 1 to n Natural Numbers using For loop");
-         document.writeln("//break statement");
+         document.writeln("break statement");
          let n = parseInt(prompt("Enter Range",0));
          for(let i=1;i<=n;i++){
             document.writeln(i);
